--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const makeTitle = title
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description=""
+      description="Sustainable Farming for a Healthier Tomorrow"
       canonical={canonicalURL}
       twitter={{
         creator: "@ugrofarm",
