link + about page ref

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -34,7 +34,8 @@ import { Icon } from "astro-icon/components";
         size="lg"
         style="outline"
         rel="noopener"
-        href="https://github.com/surjithctly/astroship"
+        alt="learn more"
+        href="https://urgro.farm/about"
         class="flex gap-1 items-center justify-center"
         target="_blank">
         Learn More
