about link seo lighthouse

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -34,11 +34,11 @@ import { Icon } from "astro-icon/components";
         size="lg"
         style="outline"
         rel="noopener"
-        alt="learn more"
+        alt="About the UGRO farm"
         href="https://urgro.farm/about"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        Learn More
+        About UGRO
         <Icon class="text-black w-4 h-4" name="bx:chevron-right" />
       </Link>
     </div>
