--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,14 @@ import Container from "@/components/container.astro";
 import Cta from "@/components/cta.astro";
 import Features from "@/components/features.astro";
 import Hero from "@/components/hero.astro";
+import Hero2 from "@/components/hero2.astro";
 import Logos from "@/components/logos.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="">
   <Container>
-    <Hero />
+    <Hero2 />
     <Features />
     <Cta />
   </Container>
